[package]
name = "rust-challenge"
version = "0.1.0"
authors = ["Gary Mansell <gary.mansell@cyberlytic.com>"]

[dependencies]
# futures = "0.1.14"
# hyper = "0.11.0"
# tokio-process = "0.1.3"
# tokio-io = "0.1"
rocket = "0.2.8"
rocket_codegen = "0.2.8"
serde = "0.9"
serde_json = "0.9"
serde_derive = "0.9"
tokio-process = "0.1.3"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json"]